--- a/notebooks/PS2_liam-tessendorf.ipynb
+++ b/notebooks/PS2_liam-tessendorf.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.605328Z",
-     "start_time": "2025-12-16T03:30:58.433090Z"
+     "end_time": "2025-12-16T03:59:11.836433Z",
+     "start_time": "2025-12-16T03:59:11.667248Z"
     }
    },
    "source": [
@@ -56,8 +56,8 @@
    "id": "9bdea75cca9d80c5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.679788Z",
-     "start_time": "2025-12-16T03:30:58.677797Z"
+     "end_time": "2025-12-16T03:59:11.905049Z",
+     "start_time": "2025-12-16T03:59:11.903021Z"
     }
    },
    "source": [
@@ -104,8 +104,8 @@
    "id": "6e4cf3582d20905d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.686059Z",
-     "start_time": "2025-12-16T03:30:58.684542Z"
+     "end_time": "2025-12-16T03:59:11.912444Z",
+     "start_time": "2025-12-16T03:59:11.910609Z"
     }
    },
    "source": [
@@ -143,8 +143,8 @@
    "id": "8043f5b0c676bb54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.696640Z",
-     "start_time": "2025-12-16T03:30:58.695015Z"
+     "end_time": "2025-12-16T03:59:11.925545Z",
+     "start_time": "2025-12-16T03:59:11.923773Z"
     }
    },
    "source": [
@@ -192,8 +192,8 @@
    "id": "3c5b36af3b1dc064",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.704526Z",
-     "start_time": "2025-12-16T03:30:58.702595Z"
+     "end_time": "2025-12-16T03:59:11.940695Z",
+     "start_time": "2025-12-16T03:59:11.938587Z"
     }
    },
    "source": [
@@ -219,8 +219,8 @@
    "id": "ccf2594b21ea88a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:58.718626Z",
-     "start_time": "2025-12-16T03:30:58.710916Z"
+     "end_time": "2025-12-16T03:59:11.954910Z",
+     "start_time": "2025-12-16T03:59:11.947958Z"
     }
    },
    "source": [
@@ -249,8 +249,8 @@
    "id": "59fd46e86b1c522b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.166827Z",
-     "start_time": "2025-12-16T03:30:58.726481Z"
+     "end_time": "2025-12-16T03:59:12.365953Z",
+     "start_time": "2025-12-16T03:59:11.963169Z"
     }
    },
    "source": [
@@ -322,8 +322,8 @@
    "id": "fd689aff4bfb3040",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.177560Z",
-     "start_time": "2025-12-16T03:30:59.175680Z"
+     "end_time": "2025-12-16T03:59:12.380252Z",
+     "start_time": "2025-12-16T03:59:12.377189Z"
     }
    },
    "source": [
@@ -339,8 +339,8 @@
    "id": "d2d2925c7b8de4a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.190644Z",
-     "start_time": "2025-12-16T03:30:59.184241Z"
+     "end_time": "2025-12-16T03:59:12.399879Z",
+     "start_time": "2025-12-16T03:59:12.390363Z"
     }
    },
    "source": [
@@ -356,8 +356,8 @@
    "id": "e8ae2c6ffa8eab6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.204115Z",
-     "start_time": "2025-12-16T03:30:59.196728Z"
+     "end_time": "2025-12-16T03:59:12.421473Z",
+     "start_time": "2025-12-16T03:59:12.411012Z"
     }
    },
    "source": [
@@ -469,8 +469,8 @@
    "id": "93ac64da8a19f003",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.234137Z",
-     "start_time": "2025-12-16T03:30:59.225236Z"
+     "end_time": "2025-12-16T03:59:12.461324Z",
+     "start_time": "2025-12-16T03:59:12.452610Z"
     }
    },
    "source": [
@@ -528,8 +528,8 @@
    "id": "98f04d14b23a799d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.434860Z",
-     "start_time": "2025-12-16T03:30:59.256616Z"
+     "end_time": "2025-12-16T03:59:12.690529Z",
+     "start_time": "2025-12-16T03:59:12.493174Z"
     }
    },
    "source": [
@@ -597,8 +597,8 @@
    "id": "25686be2c54dfd4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.453122Z",
-     "start_time": "2025-12-16T03:30:59.447102Z"
+     "end_time": "2025-12-16T03:59:12.709934Z",
+     "start_time": "2025-12-16T03:59:12.703473Z"
     }
    },
    "source": [
@@ -684,8 +684,8 @@
    "id": "e8e5d3b10ed0df4f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.544837Z",
-     "start_time": "2025-12-16T03:30:59.474676Z"
+     "end_time": "2025-12-16T03:59:12.845733Z",
+     "start_time": "2025-12-16T03:59:12.737528Z"
     }
    },
    "source": [
@@ -800,8 +800,8 @@
    "id": "51dd3a79717b555e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.572958Z",
-     "start_time": "2025-12-16T03:30:59.567752Z"
+     "end_time": "2025-12-16T03:59:12.874236Z",
+     "start_time": "2025-12-16T03:59:12.866530Z"
     }
    },
    "source": [
@@ -886,8 +886,8 @@
    "id": "e83aa7018253610",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.656949Z",
-     "start_time": "2025-12-16T03:30:59.606072Z"
+     "end_time": "2025-12-16T03:59:13.010813Z",
+     "start_time": "2025-12-16T03:59:12.933163Z"
     }
    },
    "source": [
@@ -921,8 +921,8 @@
    "id": "20433e29a79c839e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.718579Z",
-     "start_time": "2025-12-16T03:30:59.688681Z"
+     "end_time": "2025-12-16T03:59:13.092187Z",
+     "start_time": "2025-12-16T03:59:13.054440Z"
     }
    },
    "source": [
@@ -952,7 +952,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Standard GARCH(1,1) Summary ---\n",
+      "Standard GARCH(1,1)\n",
       "                     Constant Mean - GARCH Model Results                      \n",
       "==============================================================================\n",
       "Dep. Variable:                 Return   R-squared:                       0.000\n",
@@ -962,7 +962,7 @@
       "Method:            Maximum Likelihood   BIC:                           4354.63\n",
       "                                        No. Observations:                 1495\n",
       "Date:                Tue, Dec 16 2025   Df Residuals:                     1494\n",
-      "Time:                        12:30:59   Df Model:                            1\n",
+      "Time:                        12:59:13   Df Model:                            1\n",
       "                                Mean Model                                \n",
       "==========================================================================\n",
       "                 coef    std err          t      P>|t|    95.0% Conf. Int.\n",
@@ -979,7 +979,7 @@
       "\n",
       "Covariance estimator: robust\n",
       "\n",
-      "--- TGARCH(1,1) / GJR-GARCH Summary ---\n",
+      "TGARCH(1,1)\n",
       "                   Constant Mean - GJR-GARCH Model Results                    \n",
       "==============================================================================\n",
       "Dep. Variable:                 Return   R-squared:                       0.000\n",
@@ -989,7 +989,7 @@
       "Method:            Maximum Likelihood   BIC:                           4326.09\n",
       "                                        No. Observations:                 1495\n",
       "Date:                Tue, Dec 16 2025   Df Residuals:                     1494\n",
-      "Time:                        12:30:59   Df Model:                            1\n",
+      "Time:                        12:59:13   Df Model:                            1\n",
       "                                 Mean Model                                 \n",
       "============================================================================\n",
       "                 coef    std err          t      P>|t|      95.0% Conf. Int.\n",
@@ -1007,7 +1007,7 @@
       "\n",
       "Covariance estimator: robust\n",
       "\n",
-      "--- Model Comparison ---\n",
+      "Model Comparison\n",
       "GARCH(1,1)  | AIC: 4333.39, BIC: 4354.63\n",
       "TGARCH(1,1) | AIC: 4299.54, BIC: 4326.09\n"
      ]
@@ -1038,8 +1038,8 @@
    "id": "eb2b9ff5e7f9fbb9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.756947Z",
-     "start_time": "2025-12-16T03:30:59.750786Z"
+     "end_time": "2025-12-16T03:59:13.142876Z",
+     "start_time": "2025-12-16T03:59:13.135246Z"
     }
    },
    "source": [
@@ -1129,8 +1129,8 @@
    "id": "7042f171ec1067a1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.798126Z",
-     "start_time": "2025-12-16T03:30:59.794310Z"
+     "end_time": "2025-12-16T03:59:13.249945Z",
+     "start_time": "2025-12-16T03:59:13.244781Z"
     }
    },
    "source": [
@@ -1141,9 +1141,7 @@
     "df[\"ln_NASDAQ\"] = np.log(df[\"NASDAQ\"])\n",
     "\n",
     "\n",
-    "def run_cointegration_test(y, x, sample_label):\n",
-    "    print(f\"--- Test Results: {sample_label} ---\")\n",
-    "\n",
+    "def run_cointegration_test(y, x):\n",
     "    t_stat, p_value, crit_vals = ts.coint(y, x, autolag=\"AIC\")\n",
     "\n",
     "    print(f\"t-statistic:   {t_stat:.4f}\")\n",
@@ -1167,19 +1165,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.914764Z",
-     "start_time": "2025-12-16T03:30:59.887679Z"
+     "end_time": "2025-12-16T03:59:13.327128Z",
+     "start_time": "2025-12-16T03:59:13.298359Z"
     }
    },
    "cell_type": "code",
-   "source": "run_cointegration_test(df[\"ln_SP500\"], df[\"ln_NASDAQ\"], \"5(a) Full 5-Year Sample\")",
+   "source": "run_cointegration_test(df[\"ln_SP500\"], df[\"ln_NASDAQ\"])",
    "id": "4bfa89bdb4cc4791",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Test Results: 5(a) Full 5-Year Sample ---\n",
       "t-statistic:   -1.9301\n",
       "p-value:       0.5646\n",
       "Critical Vals: [-3.90378069 -3.34022008 -3.04728814]\n",
@@ -1193,14 +1190,20 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "As we can see, the full 5-year sample is not cointegrated.",
+   "id": "f0cc3fa2de423fe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### (b)",
    "id": "f85d5ba187638a3b"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:30:59.946679Z",
-     "start_time": "2025-12-16T03:30:59.936016Z"
+     "end_time": "2025-12-16T03:59:13.373458Z",
+     "start_time": "2025-12-16T03:59:13.366333Z"
     }
    },
    "cell_type": "code",
@@ -1208,7 +1211,7 @@
     "one_year_ago = df_sp500.index.max() - datetime.timedelta(days=365)\n",
     "df_1y = df[df.index >= pd.to_datetime(one_year_ago)]\n",
     "\n",
-    "run_cointegration_test(df_1y[\"ln_SP500\"], df_1y[\"ln_NASDAQ\"], \"5(b) Last 1-Year Sample\")"
+    "run_cointegration_test(df_1y[\"ln_SP500\"], df_1y[\"ln_NASDAQ\"])"
    ],
    "id": "a59ae3ec41cf161d",
    "outputs": [
@@ -1216,7 +1219,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Test Results: 5(b) Last 1-Year Sample ---\n",
       "t-statistic:   -3.7143\n",
       "p-value:       0.0176\n",
       "Critical Vals: [-3.94078403 -3.36067957 -3.06145832]\n",
@@ -1228,10 +1230,16 @@
    "execution_count": 21
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The 1 year sample is cointegrated. This result is likely a statistical artifact or reflects a temporary regime of high correlation, whereas the 5-year result reflects the true lack of a stable long-term equilibrium.",
+   "id": "d8c70afb8a0b3efe"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-16T03:31:00.083089Z",
-     "start_time": "2025-12-16T03:30:59.982551Z"
+     "end_time": "2025-12-16T03:59:13.467684Z",
+     "start_time": "2025-12-16T03:59:13.406326Z"
     }
    },
    "cell_type": "code",
